tests/valid/noRbxPostFixNew.ts
// @ts-nocheck
const part = new Instance("Part");
