tests/invalid/noRbxPostFixNew.ts
// @ts-nocheck
const part = Instance.new("Part");
